@startuml Class Diagram - Model Layer

top to bottom direction
skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam linetype ortho

skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #475569
  HeaderBackgroundColor #1E40AF
  HeaderFontColor #FFFFFF
  FontSize 11
  AttributeFontSize 10
}

title Class Diagram — Model Layer\nSistem Sekretariat Jemaat GPdI

' =============================================
' CORE ENTITIES
' =============================================

class Member {
  +id : int
  +id_jemaat : string
  +nama_lengkap : string
  +jenis_kelamin : string
  +tanggal_lahir : date
  +tempat_lahir : string
  +alamat : string
  +no_telepon : string
  +status_aktif : string
  +role : string
  -password : string
  -deleted_at : timestamp
  __
  +letters() : HasMany
  +pengajuans() : HasMany
  +createToken() : Token
}

class Letter {
  +id : int
  +member_id : int
  +tipe_surat : string
  +letter_type : string
  +nomor_surat : string
  +tanggal_surat : date
  +keterangan : string
  +pdf_path : string
  +tgl_mulai_tugas : date
  +tgl_akhir_tugas : date
  +tujuan_tugas : string
  +tahun_bergabung : int
  +asal_sekolah : string
  +kelas : string
  +semester : string
  +nilai : float
  +nama_ayah : string
  +nama_ibu : string
  +nama_anak : string
  +tanggal_lahir_anak : date
  +member_pria_id : int
  +member_wanita_id : int
  +tanggal_pernikahan : date
  __
  +member() : BelongsTo
  +memberPria() : BelongsTo
  +memberWanita() : BelongsTo
}

class PengajuanSurat {
  +id : int
  +member_id : int
  +letter_type : string
  +tipe_surat : string
  +status : string
  +catatan : string
  +letter_id : int
  +tgl_mulai_tugas : date
  +tgl_akhir_tugas : date
  +tujuan_tugas : string
  +tahun_bergabung : int
  +asal_sekolah : string
  +kelas : string
  +semester : string
  +nilai : float
  +nama_ayah : string
  +nama_ibu : string
  +nama_anak : string
  +tanggal_lahir_anak : date
  +member_pria_id : int
  +member_wanita_id : int
  +tanggal_pernikahan : date
  __
  +member() : BelongsTo
  +memberPria() : BelongsTo
  +memberWanita() : BelongsTo
  +letter() : BelongsTo
}

class LetterNumberCounter {
  +id : int
  +letter_type : string
  +year : int
  +next_number : int
  +abbreviation : string
}

' =============================================
' STANDALONE ENTITIES (konten website)
' =============================================

class JadwalPelayanan {
  +id : int
  +nama_kegiatan : string
  +kategori : string
  +deskripsi : string
  +hari : string
  +waktu : string
  +urutan : int
  +aktif : boolean
}

class GaleriFoto {
  +id : int
  +judul : string
  +deskripsi : string
  +foto : string
  +urutan : int
  __
  +getFotoUrlAttribute() : string
}

class Pengumuman {
  +id : int
  +judul : string
  +isi : string
  +tanggal_mulai : date
  +tanggal_akhir : date
  +aktif : boolean
}

' =============================================
' RELASI
' =============================================

Member "1" *-- "0..*" Letter : memiliki surat\n(member_id) >
Member "1" -- "0..*" Letter : mempelai pria\n(member_pria_id) >
Member "1" -- "0..*" Letter : mempelai wanita\n(member_wanita_id) >

Member "1" *-- "0..*" PengajuanSurat : mengajukan\n(member_id) >
Member "1" -- "0..*" PengajuanSurat : mempelai pria\n(member_pria_id) >
Member "1" -- "0..*" PengajuanSurat : mempelai wanita\n(member_wanita_id) >

PengajuanSurat "1" --> "0..1" Letter : menghasilkan\n(jika disetujui) >

Letter ..> LetterNumberCounter : <<uses>>

@enduml
 